# reach_robotics_sdk

./: .gitattributes  .gitignore  LICENSE.txt  README.md  requirements.txt
.devcontainer/: devcontainer.json  foxy-dockerfile  noetic-dockerfile  readme.md
.docsrc/: Makefile  readme.md  sphinx_requirements.txt
.docsrc/source/: conf.py  index.rst
C/examples/: decodePacketExample.c  decodePacketWithFloatExample.c  decodePacketWithFloatListExample.c  encodePacketBareExample.c  (+3 more)
ROS/bpl_alpha_description/: CMakeLists.txt  package.xml
ROS/bpl_alpha_description/launch/: view_urdf.launch  view_urdf_RA_2130.launch  view_urdf_RA_2141.launch
ROS/bpl_alpha_description/meshes/: RA-2140.stl
ROS/bpl_alpha_description/rviz/: rviz.rviz
ROS/bpl_alpha_description/urdf/: RA_2130.urdf.xacro  RA_2130_example.urdf.xacro  RA_2141_example.urdf.xacro
ROS/bpl_msgs/: CMakeLists.txt  package.xml
ROS/bpl_passthrough/: CMakeLists.txt  package.xml
ROS/bpl_passthrough/launch/: serial_passthrough.launch  udp_passthrough.launch
ROS/bpl_passthrough/launch/examples/: request_joint_positions_serial.launch  request_joint_positions_udp.launch
ROS/bpl_passthrough/nodes/: serial_passthrough.py  udp_passthrough.py
ROS/bpl_passthrough/scripts/: request_joint_positions.py
bplprotocol/: README.md  setup.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docsrc/: make.bat  make.sh  readme.md  sphinx_requirements.txt
examples/: basic_actuator_control.py  debug.py  extend_packetID.py  joint_control_app.py  kinematic_control_app.py  kinematic_position_control.py  master_arm_passthrough.py  monitor_internal_climate.py  request_jaw_calibration.py  telemetry_heartbeat.py
rs_protocol/: setup.py
scripts/: setup_linux.sh  setup_ros2.sh  setup_windows.bat
(+267 files in other folders)
