<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bpl_alpha_description</name>
  <version>0.0.1</version>
  <description>URDF descriptions of Reach Robotics Manipulators</description>
  <maintainer email="general@reachrobotics.com"></maintainer>
  <license>Properitary Software, No Public License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>