<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bpl_msgs</name>
  <version>0.0.1</version>
  <description>Reach Robotics message description</description>
  <maintainer email="general@reachrobotics.com"></maintainer>
  <license>Properitary Software, No Public License</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>